<?xml version="1.0"?>
<package format="2">
  <name>ndt_localization</name>
  <version>0.0.0</version>
  <description>The ndt_localization package</description>

  <maintainer email="rottertarmenation.y11.r18@gmali.com">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ndt_omp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ndt_omp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <export>

  </export>
</package>
