<?xml version="1.0"?>
<package format="3">
  <name>ndt_localization</name>
  <version>0.0.0</version>
  <description>The ndt_localization package</description>

  <maintainer email="rottertarmenation.y11.r18@gmali.com">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>ndt_omp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
